[package]
name = "wordmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
sqlite = "0.26.0"
hex = "0.4.3"
keyring = "1.1.2"
imap = "2.4.1"
native-tls = "0.2.8"
mail-parser = "0.4.5"
lettre = "0.10.0-rc.4"
regex = "1.5.5"
rpassword = "6.0.1"
open = "2.1.1"
clap = { version = "3.1.6", features = ["derive"] }