[package]
name = "wordmem"
version = "0.1.0"
edition = "2021"
description = "A helper tool for language learning, focusing on vocabulary."
authors = ["longrunsoul <longrunsoul@outlook.com>"]
repository = "https://github.com/longrunsoul/wordmem"
license = "GPL3"

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
sqlite = "0.26.0"
hex = "0.4.3"
keyring = "1.1.2"
imap = { git = "https://github.com/longrunsoul/rust-imap", branch = "wordmem" }
mail-parser = "0.4.8"
lettre = "0.10.0-rc.7"
regex = "1.5.6"
rpassword = "6.0.1"
open = "2.1.3"
clap = { version = "3.1.18", features = ["derive"] }
serde_json = "1.0.81"
tempfile = "3.3.0"
tar = "0.4.38"
bzip2 = "0.4.3"
dirs = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html